feat: separate managed tenant creation
